components/media/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-tailscale
  namespace: media
spec:
  type: ExternalName
  externalName: media.tail8ca202.ts.net
  ports:
    - port: 8096
      protocol: TCP
      name: http
