components/media/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-tailscale-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Basic Jellyfin support
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
    - hosts:
        - media.alexbartleynees.com
      secretName: media-tls
  rules:
    - host: media.alexbartleynees.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: media-tailscale
                port:
                  number: 8096
